# setup

./: CMakeLists.txt  main-2.cpp  main.cpp
Google_tests/: CMakeLists.txt
Google_tests/team-1-tests/: CMakeLists.txt  XXTest.cpp
Google_tests/team-2-tests/: XXTest.cpp
Google_tests/team-3-tests/: XXTest.cpp
Google_tests/xx_tests/: XXTest.cpp
team-1-files/: CMakeLists.txt
team-2-files/: CMakeLists.txt  Team2LineCounter.cpp  Team2LineCounter.h
team-3-files/: Team3Xx.cpp  Team3Xx.h
xx_files/: CMakeLists.txt
